--- a/24_foundation_layout/index.html
+++ b/24_foundation_layout/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="common.css" />
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="customers.css" />
+    <link rel="stylesheet" href="features.css" />
     <title>Document</title>
   </head>
   <body>
@@ -132,29 +133,43 @@
       <!-- Features -->
 
       <section class="features">
-        <div class="">
-          <h4 class="features__subtitle">Features</h4>
-          <h2 class="features__title">Easily find leads and customers</h2>
-          <p class="features__description">
-            Send one-off and automated email, push, and in-app messages to
-            people. Create better stories.
-          </p>
-          <div class="">
-            <img src="./img/features/compass_icon.png" alt="Compas" />
-            <h5 class="features__">Acquire new customers</h5>
+        <img
+          class="features__left-decoration"
+          src="img/features/eye_picture.png"
+          alt="Half Hidden"
+        />
+        <div class="features__content">
+          <div class="features__column">
+            <h4 class="features__subtitle">Features</h4>
+            <h2 class="features__title">Easily find leads and customers</h2>
+            <p class="features__description">
+              Send one-off and automated email, push, and in-app messages to
+              people. Create better stories.
+            </p>
+            <div class="features__advantage-header">
+              <img src="./img/features/compass_icon.png" alt="Compas" />
+              <h5 class="features__advantage-title">Acquire new customers</h5>
+            </div>
+            <p class="features__advantage-description">
+              Everything you need to start building – including open-source
+              code, documentation.
+            </p>
+            <div class="features__advantage-item">
+              <img src="img/features/goverment_icon.png" alt="Goverment" />
+              <span class="features__advantage-item-text">Engage users</span>
+            </div>
+            <div class="features__advantage-item">
+              <img src="img/features/bucket_icon.png" alt="Goverment" />
+              <span class="features__advantage-item-text"
+                >Develop across platforms</span
+              >
+            </div>
           </div>
-          <p class="features__advantage">
-            Everything you need to start building – including open-source code,
-            documentation.
-          </p>
-          <div>
-            <img src="img/features/goverment_icon.png" alt="Goverment" />
-            <span class="features__text">Engage users</span>
-          </div>
-          <div>
-            <img src="img/features/bucket_icon.png" alt="Goverment" />
-            <span class="features__text">Develop across platforms</span>
-          </div>
+          <img
+            class="features__banner"
+            src="./img/features/features_main_picture.png"
+            alt=""
+          />
         </div>
       </section>
 
