--- a/24_foundation_layout/index.html
+++ b/24_foundation_layout/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="customers.css" />
     <link rel="stylesheet" href="features.css" />
+    <link rel="stylesheet" href="tips.css" />
     <title>Document</title>
   </head>
   <body>
@@ -107,39 +108,114 @@
       <!-- Customers -->
 
       <section class="customers">
-        <img
-          class="customers__logo"
-          src="./img/logos/new_york_times_logo.png"
-          alt="New York Times Logo"
-        />
-        <img
-          class="customers__logo"
-          src="./img/logos/forbes_logo.png"
-          alt="Forbes Logo"
-        />
-        <img
-          class="customers__logo"
-          src="./img/logos/apple_logo.png"
-          alt="Apple Logo"
-        />
-        <img
-          class="customers__logo"
-          src="./img/logos/mashable_logo.png"
-          alt="Mashable Logo"
-        />
-        <img
-          class="customers__logo"
-          src="./img/logos/wsj_logo.png"
-          alt="WSJ logo"
-        />
-        <img
-          class="customers__logo"
-          src="./img/logos/google_logo.png"
-          alt="Google Logo"
-        />
+        <div class="customers__row">
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="./img/logos/new_york_times_logo.png"
+              alt="New York Times Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="./img/logos/forbes_logo.png"
+              alt="Forbes Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="./img/logos/apple_logo.png"
+              alt="Apple Logo"
+            />
+          </div>
+        </div>
+        <div class="customers__row">
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="./img/logos/mashable_logo.png"
+              alt="Mashable Logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="./img/logos/wsj_logo.png"
+              alt="WSJ logo"
+            />
+          </div>
+          <div class="customers__item">
+            <img
+              class="customers__logo"
+              src="./img/logos/google_logo.png"
+              alt="Google Logo"
+            />
+          </div>
+        </div>
       </section>
 
-      <!-- Features -->
+      <!-- Features Mobile Tips -->
+
+      <section class="tips">
+        <div class="tip">
+          <span class="tips__subtitle">Acquire Customers</span>
+          <h3 class="tips__title">Easily find leads and customers</h3>
+          <p class="tips__description">
+            Send one-off and automated email, push, and in-app messages to
+            people. Create better stories.
+          </p>
+          <figure class="tip__decoration">
+            <img
+              src="./img/mobile/tips/bird_mobile.png"
+              alt="Acquire Customers"
+              class="tips__image"
+            />
+            <figcaption class="tips__image-caption">
+              A better way to acquire new users
+            </figcaption>
+          </figure>
+        </div>
+        <div class="tip">
+          <span class="tips__subtitle">Engage Users</span>
+          <h3 class="tips__title">Engage with your audience</h3>
+          <p class="tips__description">
+            Send one-off and automated email, push, and in-app messages to
+            people. Create better stories.
+          </p>
+          <figure class="tip__decoration">
+            <img
+              src="./img/mobile/tips/tip_engage_user.png"
+              alt="Engage Users"
+              class="tips__image"
+            />
+            <figcaption class="tips__image-caption">
+              Knowledge base and smart self-service
+            </figcaption>
+          </figure>
+        </div>
+        <div class="tip">
+          <span class="tips__subtitle">Support</span>
+          <h3 class="tips__title">The best customer experiences</h3>
+          <p class="tips__description">
+            A beautifully simple system for tracking, prioritizing, and solving
+            customer support tickets.
+          </p>
+          <figure class="tip__decoration">
+            <img
+              src="./img/mobile/tips/bird_mobile.png"
+              alt="Support"
+              class="tips__image"
+            />
+            <figcaption class="tips__image-caption">
+              Live chat and messaging
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <!-- Features Desktop -->
 
       <section class="features">
         <img
